--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons:
+  cupertino_icons: null
+  firebase_core: ^0.7.0
 
 dev_dependencies:
   flutter_test:
