--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cloud_firestore: ^0.16.0
   cupertino_icons: null
   firebase_core: ^0.7.0
+  firebase_storage: ^7.0.0
+  provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
