--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: null
   firebase_core: ^0.7.0
   firebase_storage: ^7.0.0
+  marquee: ^1.6.1
   provider: ^4.3.3
 
 dev_dependencies:
@@ -45,7 +46,6 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   assets:
     - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
