--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^0.16.0
-  cupertino_icons: null
+  firebase: ^8.0.0
   firebase_core: ^0.7.0
   firebase_storage: ^7.0.0
-  marquee: ^1.6.1
+  http: ^0.12.2
   provider: ^4.3.3
+  native_pdf_view: any
 
 dev_dependencies:
   flutter_test:
