--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   cloud_firestore: ^0.16.0
   firebase: ^8.0.0
   firebase_core: ^0.7.0
-  firebase_storage: ^7.0.0
   flutter_svg: ^0.19.2+1
+  pinch_zoom_image_updated: ^0.2.6
   provider: ^4.3.3
 
 dev_dependencies:
