added Project Items

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_core: ^0.7.0
   pinch_zoom_image_updated: ^0.2.6
   provider: ^4.3.3
+  youtube_player_iframe: ^1.2.0+2
 
 dev_dependencies:
   flutter_test:
