--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,23 +1,23 @@
 {
-    "name": "my_portfolio",
-    "short_name": "my_portfolio",
-    "start_url": ".",
-    "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
-    "orientation": "portrait-primary",
-    "prefer_related_applications": false,
-    "icons": [
-        {
-            "src": "icons/Icon-192.png",
-            "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/Icon-512.png",
-            "sizes": "512x512",
-            "type": "image/png"
-        }
-    ]
+  "name": "Portfolio: Rahul Badgujar",
+  "short_name": "Portfolio: Rahul Badgujar",
+  "start_url": ".",
+  "display": "standalone",
+  "background_color": "#cd5c5c",
+  "theme_color": "#cd5c5c",
+  "description": "Portfolio: Rahul Badgujar",
+  "orientation": "portrait-primary",
+  "prefer_related_applications": false,
+  "icons": [
+    {
+      "src": "icons/Icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/Icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
