--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,11 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
+  cached_network_image:
   cloud_firestore: ^0.16.0
   firebase_core: ^0.7.0
+  flutter:
+    sdk: flutter
   google_fonts: ^1.1.2
   native_pdf_renderer: ^2.4.0
   pinch_zoom_image_updated: ^0.2.6
